# Group9-Microprocessors

./: .gitignore  CHANGELOG.md  CommProtocol.md  Controller.md  HANDBOOK.md  HANDBOOK_v1.md  HANDBOOK_v2.md  INVESTIGATION.md  PROJECT_PLAN.md  README.md  REFERENCE-LINKS.md  Sensors.md  WORKFLOW.md  danhgianhom.md  filter_used.md  ky_thuat_han.md  soldering_technique_verE_of_ky_thuat_han.md
LED_async/: output_hard.csv  processor.py
Resources/: COMPARE.md  CommProtocol.md  Controller.md  INVESTIGATION.md  Initial_setup_idea.md  Investigation.md  Kalman.md  Overview_Final.md  PROJECT_PLAN.md  REFERENCE-LINKS.md  Rust_01.md  Rust_02.md  Rust_Embed_01.md  Rust_Embed_02.md  Sensors.md  Test_Kit.md  connection_specifications.md  convert-raw-data-to-HR-SpO2.md  initial_setup_idea.md  ky_thuat_han.md  soldering_technique_verE_of_ky_thuat_han.md  specifications.md
Resources/Images/: test_C.jfif  test_Py.jfif  test_Rust.jfif
Testing/: Test.ino  Tester.ino
esp32c6-max/: Cargo.toml  convert-raw-data-to-HR-SpO2.md  filter_used.md
images-CommProtocol/: CommProtocol.md
max30102/: Cargo.toml
mpu6050/: Cargo.toml
read-hr-spo2/: Cargo.toml
src/: Cargo.toml
ssd1306/version-1-beta-4/: README.md  note.md
test-async/: Cargo.toml
test_C/MPU6050_KALMAN/: sdkconfig
utils/LED_async/: Cargo.toml  led_timer.ipynb  output_soft.csv
utils/check_i2c/: check_i2c.ino
utils/code-loc-nhieu/: Cargo.toml
utils/max30102/: Cargo.toml
utils/max30102-esp32c6/: Cargo.toml
utils/mpu6050/src/: main.rs
utils/ssd1306/version-1-beta-3/: Cargo.toml
utils/test_C/MPU6050_KALMAN/: sdkconfig.old
