[package]
edition = "2021"
name    = "just-max"
version = "0.1.0"

[[bin]]
name = "just-max"
path = "./src/bin/main.rs"

[dependencies]
esp-backtrace = { version = "0.14.2", features = [
    "esp32c3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.21.1", features = [ "esp32c3" ] }
esp-println = { version = "0.12.0", features = ["esp32c3", "log"] }
log = { version = "0.4.22" }
esp-alloc = { version = "0.5.0" }
libm = "0.2.15"
max3010x = "0.2.0"
fugit = "0.3.7"
riscv-rt = "0.14.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
