[package]
edition = "2021"
name    = "read-hr-spO2"
version = "0.1.0"

[[bin]]
name = "max3010x-esp32c6"
path = "./src/bin/main.rs"

[dependencies]
critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = ["task-arena-size-20480"] }
embassy-time     = { version = "0.4.0", features = ["generic-queue-8"] }
esp-alloc        = "0.7.0"
esp-hal          = { version = "1.0.0-beta.0", features = ["esp32c6", "unstable"] }
esp-hal-embassy  = { version = "0.7.0", features = ["esp32c6"] }
static_cell      = { version = "2.1.0", features = ["nightly"] }
esp-println      = { version = "0.13.1", features = ["esp32c6"] }
esp-backtrace    = { version = "0.15.1", features = ["esp32c6", "println"]}
max3010x         = "0.2.0" 
libm = "0.2.15"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
